---
source: cli/src/handlers/smoke_tests.rs
expression: "String::from_utf8(stdout.0.clone()).unwrap()"
---
Daemon response:
LibraryFullResponse { artists: [Artist { id: RecordId { tb: "artist", id: "01J1K5B6RJ84WJXCWYJ5WNE12E" }, name: "Test Artist", runtime: Duration { seconds: 180, nanos: 0 }, album_count: 1, song_count: 1 }], albums: [Album { id: RecordId { tb: "album", id: "01J1K5B6RJ84WJXCWYJ5WNE12E" }, title: "Test Album", artists: ["Test Artist"], release_year: Some(2021), runtime: Duration { seconds: 180, nanos: 0 }, song_count: 1, discs: 1, genres: ["Test Genre"] }], songs: [Song { id: RecordId { tb: "song", id: "01J1K5B6RJ84WJXCWYJ5WNE12E" }, title: "Test Song", artists: ["Test Artist"], album_artists: ["Test Artist"], album: "Test Album", genres: ["Test Genre"], runtime: Duration { seconds: 180, nanos: 0 }, track: Some(0), disc: Some(0), release_year: Some(2021), extension: "mp3", path: "test.mp3" }], playlists: [Playlist { id: RecordId { tb: "playlist", id: "01J1K5B6RJ84WJXCWYJ5WNE12E" }, name: "Test Playlist", runtime: Duration { seconds: 180, nanos: 0 }, song_count: 1 }], collections: [Collection { id: RecordId { tb: "collection", id: "01J1K5B6RJ84WJXCWYJ5WNE12E" }, name: "Collection 0", runtime: Duration { seconds: 180, nanos: 0 }, song_count: 1 }], dynamic_playlists: [DynamicPlaylist { id: RecordId { tb: "dynamic", id: "01J1K5B6RJ84WJXCWYJ5WNE12E" }, name: "Test Dynamic", query: "title = \"Test Song\"" }] }
